<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/alarm"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollChipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlarm">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            app:checkedChip="@id/chipMon"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMon"
                style="@style/Widget.Obi.Chip.State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_m"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTue"
                style="@style/Widget.Obi.Chip.State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_t"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWed"
                style="@style/Widget.Obi.Chip.State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_w"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThu"
                style="@style/Widget.Obi.Chip.State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_th"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFri"
                style="@style/Widget.Obi.Chip.State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_f"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSat"
                style="@style/Widget.Obi.Chip.State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_sa"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSun"
                style="@style/Widget.Obi.Chip.State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_s"
                android:textAlignment="center" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_cloud_24"
        android:drawablePadding="4dp"
        android:text="@string/weather_alarm"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollChipGroup" />

    <TextView
        android:id="@+id/selectAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_access_alarm_24"
        android:drawablePadding="4dp"
        android:text="@string/select_alarm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchWeather" />

    <EditText
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_baseline_keyboard_24"
        android:drawablePadding="4dp"
        android:hint="@string/title_optional"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectAlarm" />

</androidx.constraintlayout.widget.ConstraintLayout>