<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/weatherAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Example alarm" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherAlarm"
                    tools:text="08 : 26 AM" />

                <Switch
                    android:id="@+id/activeSwitch"
                    style="@style/Widget.Obi.Switch.Alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:trackTint="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@id/time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/weatherAlarm" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:scrollbars="none"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/time">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbarAlwaysDrawHorizontalTrack="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipMon"
                            style="@style/Widget.Obi.Chip.State"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monday"
                            android:textColor="@android:color/white" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipTue"
                            style="@style/Widget.Obi.Chip.State"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tuesday"
                            android:textColor="@android:color/white" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipWed"
                            style="@style/Widget.Obi.Chip.State"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wednesday"
                            android:textColor="@android:color/white" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipThu"
                            style="@style/Widget.Obi.Chip.State"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thursday"
                            android:textColor="@android:color/white" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipFri"
                            style="@style/Widget.Obi.Chip.State"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/friday"
                            android:textColor="@android:color/white" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipSat"
                            style="@style/Widget.Obi.Chip.State"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saturday"
                            android:textColor="@android:color/white" />

                        <com.google.android.material.chip.Chip
                            android:id="@id/chipSun"
                            style="@style/Widget.Obi.Chip.State"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunday"
                            android:textColor="@android:color/white" />
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>